...
    //MARK: - UI Variables
    let characterImageView: UIImageView = {
        let imageView = UIImageView()
        imageView.translatesAutoresizingMaskIntoConstraints = false
        imageView.contentMode = .scaleAspectFill
        imageView.kf.indicatorType = .activity
        imageView.accessibilityIdentifier = "Character image"
        return imageView
    }()

    let tableView: UITableView = {
        let tableView = UITableView(frame: .zero)
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: String(describing: UITableViewCell.self))
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.accessibilityIdentifier = "Table of collections"
        return tableView
    }()

    //MARK: - BaseView Setup
    func initialize() {
        backgroundColor = .redMarvel
...
