...

    var imageViewSnapshot: UIView? {
        characterImageView.snapshotView(afterScreenUpdates: false)
    }

    func configure(viewModel: CharacterCellViewModel) {
        accessibilityIdentifier = "Character Cell"
        characterImageView.kf.setImage(with: viewModel.imageUrl)
        characterNameLabel.text = viewModel.characterName
        characterDescriptionTextView.text = viewModel.characterDescription
    }
}

